--- a/serverproduct/src/main/assets/DynamicPriceTool.html
+++ b/serverproduct/src/main/assets/DynamicPriceTool.html
@@ -6,6 +6,7 @@
     <!-- 引入 echarts.js -->
     <script src="echarts.min.js"></script>
 </head>
+
 <body>
 <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
 <div id="main" style="width:100%;height:200px;"></div>
@@ -13,7 +14,6 @@
 
 
 function refreshView(){
-window.Datas.ShowMessage();
 try{
     // 基于准备好的dom，初始化echarts实例
 var myChart = echarts.init(document.getElementById('main'));
@@ -133,12 +133,12 @@ if(jsonData!=null&&jsonData.hnDatas!=null){
             myChart.hideLoading();
         }
 }catch(e){
-    window.Datas.ShowMessage();
+    window.Datas.ShowMessage(e);
 }
-
-
 }
-
     </script>
 </body>
 </html>
+<script type="text/javascript">
+document.write("<scr"+"ipt src=\"echarts.min.js\" language=\"JavaScript\" charset=\"gb2312\"></sc"+"ript>")
+</script>
