--- a/serverproduct/src/main/assets/ReportingTool.html
+++ b/serverproduct/src/main/assets/ReportingTool.html
@@ -78,6 +78,7 @@ if(jsonData!=null&&jsonData.rainDatas!=null&&jsonData.windDatas!=null&&jsonData.
         }
     },
     grid: {
+        left:'15%',
         right: '30%'
     },
 
